fix: hybrid, pending, etc

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -129,18 +129,18 @@
           id="section-stats"
           data-toggles="1::1::1::0::0"
           data-startingtexts="Avg::Avg::Avg::Active::Active"
-          data-highlighttexts="Daily::Weekly::Monthly::Monthly Passes::Reservations"
+          data-highlighttexts="Daily::Weekly::Monthly::Monthly Customers::Reservations"
           data-endingtexts="Earnings::Earnings::Earnings::::"
-          data-types="average daily earning::average weekly earning::average monthly earning::active monthly passes::active reservations"
+          data-types="average daily earning::average weekly earning::average monthly earning::active monthly customers::active reservations"
         ></div>
         <div
           id="section-content"
           data-sectioncount="2"
-          data-tabtitles="Active Monthly Pass Growth::Upcoming Monthly Pass Renewals"
-          data-subtitles="Monthly pass growth tracker::Users due for monthly pass renewals"
+          data-tabtitles="Active Monthly Customer Growth::Upcoming Monthly Customer Renewals"
+          data-subtitles="Monthly customer growth tracker::Users due for monthly customer renewals"
           data-sectiononesearchtext="Search keyword..."
           data-sectiononesettings="1"
-          data-listemptytexts="::<p class='text-sm'>No upcoming monthly pass renewals yet</p><p>Range: Two weeks notice</p>"
+          data-listemptytexts="::<p class='text-sm'>No upcoming monthly customer renewals yet</p><p>Range: Two weeks notice</p>"
           data-listtitletexts="[]::[User ID//User//Expires After]"
           data-listitembtnids="[]::[renewBtn]"
           data-listitembtntexts="[]::[Renew [-🎫-]]"
@@ -170,16 +170,16 @@
           id="section-stats"
           data-toggles="0::0::0::0"
           data-startingtexts="Total::Total::Active::Active"
-          data-highlighttexts="Regular::Student::Monthly Pass::Reservations"
+          data-highlighttexts="Regular::Student::Monthly::Reservations"
           data-endingtexts="Customers::Customers::Customers::"
         ></div>
         <div
           id="section-content"
           data-sectioncount="1"
-          data-tabtitles="All Registered Customers::Active Monthly Pass Customers::Past Monthly Pass Customers::All Archived Customers"
-          data-subtitles="Manage all customers::Manage all monthly pass customers::View all past monthly pass customers::View all archived customers"
+          data-tabtitles="All Registered Customers::Active Monthly Customers::Past Monthly Customers::All Archived Customers"
+          data-subtitles="Manage all customers::Manage all monthly customers::View all past monthly customers::View all archived customers"
           data-sectiononesearchtext="Search keyword..."
-          data-listemptytexts="No registered customers yet::No active monthly pass customers yet::No past monthly pass customers yet::No archived customers yet"
+          data-listemptytexts="No registered customers yet::No active monthly customers yet::No past monthly customers yet::No archived customers yet"
           data-listtitletexts="[Customer ID//Customer//Customer Type//Price Rate//Date Registered]::[Customer ID//Customer//Start Date//End Date//Days Left//Amount Paid//Price Rate//Log Date & Time]::[Customer ID//Customer//Start Date//End Date//Amount Paid//Price Rate//Log Date & Time]::[Customer ID//Customer//Log Date & Time]"
           data-listitembtnids="[customerProcessBtn//customerEditDetailsBtn]::[customerProcessBtn//customerEditDetailsBtn]::[customerDetailsBtn]::[customerDetailsBtn]"
           data-listitembtntexts="[Process [-📒-]//Edit Details [-⚙️-]]::[Process [-📒-]//Edit Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]"
@@ -206,10 +206,10 @@
         <div
           id="section-content"
           data-sectioncount="1"
-          data-tabtitles="Regular Check-Ins Logbook::Monthly Pass Check-Ins Logbook::Archived Check-Ins Logbook"
-          data-subtitles="All regular customer check-ins::All monthly pass customer check-ins::All archived check-ins"
+          data-tabtitles="Regular Check-Ins Logbook::Monthly Check-Ins Logbook::Archived Check-Ins Logbook"
+          data-subtitles="All regular customer check-ins::All monthly customer check-ins::All archived check-ins"
           data-sectiononesearchtext="Search keyword..."
-          data-listemptytexts="No regular customer check-ins yet::No monthly pass customer check-ins yet::No archived check-ins yet"
+          data-listemptytexts="No regular customer check-ins yet::No monthly customer check-ins yet::No archived check-ins yet"
           data-listtitletexts="[Customer ID//Customer//Log Date & Time]::[Customer ID//Customer//Log Date & Time]::[Customer ID//Customer//Log Date & Time]"
           data-listitembtnids="[checkinArchiveBtn]::[checkinArchiveBtn]::[checkinDetailsBtn]"
           data-listitembtntexts="[Archive [-🧾-]]::[Archive [-🧾-]]::[Details [-⚙️-]]"
@@ -246,7 +246,7 @@
           data-subtitles="Auto updating tab::Upcoming reservations::Old reservations"
           data-sectiononesearchtext="Search keyword..."
           data-listemptytexts="::No upcoming schedules yet::No past schedules yet"
-          data-listtitletexts="[]::[Reservation ID//User//Reservation Type//Schedule//Date & Time Registered]::[Reservation ID//User//Reservation Type//Schedule//Date & Time Registered]"
+          data-listtitletexts="[]::[Reservation ID//User//Reservation Type//Schedule//Log Date & Time]::[Reservation ID//User//Reservation Type//Schedule//Log Date & Time]"
           data-listitembtnids="[]::[reservationViewDetailsBtn//reservationVoidBtn]::[reservationViewDetailsBtn//reservationVoidBtn]"
           data-listitembtntexts="[]::[View Details [-⚙️-]//Void [-📕-]]::[View Details [-⚙️-]//Void [-📕-]]"
           data-listitembtncolors="[]::[orange//red]::[orange//red]"
@@ -314,7 +314,7 @@
           data-subtitles="All stocks::About to be out of stock::Dead stocks::Fast moving stocks::Slow moving stocks"
           data-sectiononesearchtext="Search keyword..."
           data-listemptytexts="No unique products yet::No low stock products yet::No out of stock products yet::No fast moving stocks yet::No slow moving stocks yet"
-          data-listtitletexts="[Product ID//Product Name//Price//Quantity//Status//Measurement//Measurement Unit//Product Category ID//Date Registered]::[Product ID//Product Name//Price//Quantity//Status//Measurement//Measurement Unit//Product Category ID//Date Registered]::[Product ID//Product Name//Price//Quantity//Status//Measurement//Measurement Unit//Product Category ID//Date Registered]::[Product ID//Product Name//Price//Quantity//Status//Measurement//Measurement Unit//Product Category ID//Date Registered]::[Product ID//Product Name//Price//Quantity//Status//Measurement//Measurement Unit//Product Category ID//Date Registered]"
+          data-listtitletexts="[Product ID//Product Name//Price//Quantity//Status//Measurement//Measurement Unit//Product Category ID//Date Added]::[Product ID//Product Name//Price//Quantity//Status//Measurement//Measurement Unit//Product Category ID//Date Added]::[Product ID//Product Name//Price//Quantity//Status//Measurement//Measurement Unit//Product Category ID//Date Added]::[Product ID//Product Name//Price//Quantity//Status//Measurement//Measurement Unit//Product Category ID//Date Added]::[Product ID//Product Name//Price//Quantity//Status//Measurement//Measurement Unit//Product Category ID//Date Added]"
           data-listitembtnids="[productDetailsBtn]::[productDetailsBtn]::[productDetailsBtn]::[productDetailsBtn]::[productDetailsBtn]"
           data-listitembtntexts="[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]"
           data-listitembtncolors="[yellow]::[yellow]::[yellow]::[yellow]::[yellow]"
@@ -346,7 +346,7 @@
           data-subtitles="Total pending transactions::Total void transactions::Total complete transactions::Total refund transactions"
           data-sectiononesearchtext="Search keyword..."
           data-listemptytexts="No pending transactions yet::No canceled transactions yet::No complete transactions yet::No refund transactions yet"
-          data-listtitletexts="[Transaction ID//Customer//Purpose//Amount to Pay//Price Rate//Log Date & Time]::[Transaction ID//Customer//Purpose//Log Date & Time]::[Transaction ID//Customer//Purpose//Amount to Pay//Amount Paid//Change Amount//Price Rate//Payment Method//Log Date & Time]::[Transaction ID//Customer//Purpose//Refund Amount//Log Date & Time]"
+          data-listtitletexts="[Transaction ID//Customer//Purpose//Amount to Pay//Price Rate//Log Date & Time]::[Transaction ID//Customer//Purpose//Log Date & Time]::[Transaction ID//Customer//Purpose//Amount to Pay//Amount Paid - Cash//Amount Paid - Cashless//Change Amount//Price Rate//Payment Method//Log Date & Time]::[Transaction ID//Customer//Purpose//Refund Amount//Log Date & Time]"
           data-listitembtnids="[transactionProcessBtn//transactionCancelBtn]::[transactionDetailsBtn]::[transactionDetailsBtn//transactionRefundBtn]::[transactionDetailsBtn]"
           data-listitembtntexts="[Process [-📒-]//Cancel [-📕-]]::[Details [-⚙️-]]::[Details [-⚙️-]//Refund [-🧾-]]::[Details [-⚙️-]]"
           data-listitembtncolors="[yellow//red]::[gray]::[gray//gray]::[gray]"
@@ -401,8 +401,8 @@
         <div
           id="section-content"
           data-sectioncount="1"
-          data-tabtitles="Monthly Pass Users::Regular / Daily Users::Students::Supplements::Reservations"
-          data-subtitles="Monthly Pass Users::Regular / Daily Users::Students::Supplements::Reservations"
+          data-tabtitles="Monthly Users::Regular / Daily Users::Students::Supplements::Reservations"
+          data-subtitles="Monthly Users::Regular / Daily Users::Students::Supplements::Reservations"
           data-sectiononesearchtext="Search keyword..."
           data-sectiononesettings="1"
           data-listemptytexts="No monthly members found::No regular users found::No student users found::No supplement sales found::No reservations found"
