--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -346,7 +346,7 @@
           data-subtitles="Total pending transactions::Total void transactions::Total complete transactions::Total refund transactions"
           data-sectiononesearchtext="Search keyword..."
           data-listemptytexts="No pending transactions yet::No canceled transactions yet::No complete transactions yet::No refund transactions yet"
-          data-listtitletexts="[Transaction ID//Customer//Purpose//Amount to Pay//Price Rate//Log Date & Time]::[Transaction ID//Customer//Purpose//Log Date & Time]::[Transaction ID//Customer//Purpose//Amount to Pay//Amount Paid - Cash//Amount Paid - Cashless//Change Amount//Price Rate//Payment Method//Log Date & Time]::[Transaction ID//Customer//Purpose//Refund Amount//Log Date & Time]"
+          data-listtitletexts="[Transaction ID//Customer//Purpose//Amount to Pay//Price Rate//Log Date & Time]::[Transaction ID//Customer//Purpose//Log Date & Time]::[Transaction ID//Customer//Purpose//Amount to Pay//Amount Paid: Cash//Amount Paid: Cashless//Change Amount//Price Rate//Payment Method//Log Date & Time]::[Transaction ID//Customer//Purpose//Refund Amount//Log Date & Time]"
           data-listitembtnids="[transactionProcessBtn//transactionCancelBtn]::[transactionDetailsBtn]::[transactionDetailsBtn//transactionRefundBtn]::[transactionDetailsBtn]"
           data-listitembtntexts="[Process [-📒-]//Cancel [-📕-]]::[Details [-⚙️-]]::[Details [-⚙️-]//Refund [-🧾-]]::[Details [-⚙️-]]"
           data-listitembtncolors="[yellow//red]::[gray]::[gray//gray]::[gray]"
