--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -103,6 +103,7 @@
       sectiononesettings: 1 enables settings
       listemptytexts: empty list texts, tabs separated by "::"
       listtitletexts: [column titles, separated by "//"], tabs separated by "::"
+      listdatasortby: [column sort types, separated by "//"], tabs separated by "::"
       listitembtnids: [item button ids, separated by "//"], tabs separated by "::"
       listitembtntexts: [item button texts, separated by "//"], tabs separated by "::"
       listitembtncolors: [item button colors, separated by "//"], tabs separated by "::"
@@ -181,6 +182,7 @@
           data-sectiononesearchtext="Search keyword..."
           data-listemptytexts="No registered customers yet::No active monthly customers yet::No past monthly customers yet::No archived customers yet"
           data-listtitletexts="[Customer ID//Customer//Customer Type//Price Rate//Date Registered]::[Customer ID//Customer//Start Date//End Date//Days Left//Amount Paid//Price Rate//Log Date & Time]::[Customer ID//Customer//Start Date//End Date//Amount Paid//Price Rate//Log Date & Time]::[Customer ID//Customer//Log Date & Time]"
+          data-listdatasortby="[name//name//name//number//date]::[name//name//date//date//number//number//name//date]::[name//name//date//date//number//name//date]::[name//name//date]"
           data-listitembtnids="[customerProcessBtn//customerEditDetailsBtn]::[customerProcessBtn//customerEditDetailsBtn]::[customerDetailsBtn]::[customerDetailsBtn]"
           data-listitembtntexts="[Process [-📒-]//Edit Details [-⚙️-]]::[Process [-📒-]//Edit Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]"
           data-listitembtncolors="[yellow//orange]::[yellow//orange]::[gray]::[gray]"
