--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -138,15 +138,16 @@
           id="section-content"
           data-sectioncount="2"
           data-tabtitles="Active Monthly Customer Growth::Upcoming Monthly Customer Renewals"
-          data-subtitles="Monthly customer growth tracker::Users due for monthly customer renewals"
+          data-subtitles="Monthly customer growth tracker::Customers due for monthly customer renewals"
           data-sectiononesearchtext="Search keyword..."
           data-sectiononesettings="1"
           data-listemptytexts="::<p class='text-sm'>No upcoming monthly customer renewals yet</p><p>Range: Two weeks notice</p>"
-          data-listtitletexts="[]::[User ID//User//Expires After]"
+          data-listtitletexts="[]::[Customer ID//Customer//Expires After]"
+          data-listdatasortby="[]::[name//name//date]"
           data-listitembtnids="[]::[renewBtn]"
           data-listitembtntexts="[]::[Renew [-🎫-]]"
           data-listitembtncolors="[]::[sky]"
-          data-sectiontwotitletexts="User Statistic Analysis::Below the chart, you can click legends to toggle"
+          data-sectiontwotitletexts="Customer Statistic Analysis::Below the chart, you can click legends to toggle"
           data-sectiontwosettings="1"
         ></div>
       </section>
@@ -213,6 +214,7 @@
           data-sectiononesearchtext="Search keyword..."
           data-listemptytexts="No regular customer check-ins yet::No monthly customer check-ins yet::No archived check-ins yet"
           data-listtitletexts="[Customer ID//Customer//Log Date & Time]::[Customer ID//Customer//Log Date & Time]::[Customer ID//Customer//Log Date & Time]"
+          data-listdatasortby="[name//name//date]::[name//name//date]::[name//name//date]"
           data-listitembtnids="[checkinArchiveBtn]::[checkinArchiveBtn]::[checkinDetailsBtn]"
           data-listitembtntexts="[Archive [-🧾-]]::[Archive [-🧾-]]::[Details [-⚙️-]]"
           data-listitembtncolors="[gray]::[gray]::[gray]"
@@ -248,7 +250,8 @@
           data-subtitles="Auto updating tab::Upcoming reservations::Old reservations"
           data-sectiononesearchtext="Search keyword..."
           data-listemptytexts="::No upcoming schedules yet::No past schedules yet"
-          data-listtitletexts="[]::[Reservation ID//User//Reservation Type//Schedule//Log Date & Time]::[Reservation ID//User//Reservation Type//Schedule//Log Date & Time]"
+          data-listtitletexts="[]::[Reservation ID//Customer//Reservation Type//Schedule//Log Date & Time]::[Reservation ID//Customer//Reservation Type//Schedule//Log Date & Time]"
+          data-listdatasortby="[]::[name//name//name//date//date]::[name//name//name//date//date]"
           data-listitembtnids="[]::[reservationViewDetailsBtn//reservationVoidBtn]::[reservationViewDetailsBtn//reservationVoidBtn]"
           data-listitembtntexts="[]::[View Details [-⚙️-]//Void [-📕-]]::[View Details [-⚙️-]//Void [-📕-]]"
           data-listitembtncolors="[]::[orange//red]::[orange//red]"
@@ -317,6 +320,7 @@
           data-sectiononesearchtext="Search keyword..."
           data-listemptytexts="No unique products yet::No low stock products yet::No out of stock products yet::No fast moving stocks yet::No slow moving stocks yet"
           data-listtitletexts="[Product ID//Product Name//Price//Quantity//Status//Measurement//Measurement Unit//Product Category ID//Date Added]::[Product ID//Product Name//Price//Quantity//Status//Measurement//Measurement Unit//Product Category ID//Date Added]::[Product ID//Product Name//Price//Quantity//Status//Measurement//Measurement Unit//Product Category ID//Date Added]::[Product ID//Product Name//Price//Quantity//Status//Measurement//Measurement Unit//Product Category ID//Date Added]::[Product ID//Product Name//Price//Quantity//Status//Measurement//Measurement Unit//Product Category ID//Date Added]"
+          data-listdatasortby="[name//name//number//number//name//number//name//name//date]::[name//name//number//number//name//number//name//name//date]::[name//name//number//number//name//number//name//name//date]::[name//name//number//number//name//number//name//name//date]::[name//name//number//number//name//number//name//name//date]"
           data-listitembtnids="[productDetailsBtn]::[productDetailsBtn]::[productDetailsBtn]::[productDetailsBtn]::[productDetailsBtn]"
           data-listitembtntexts="[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]"
           data-listitembtncolors="[yellow]::[yellow]::[yellow]::[yellow]::[yellow]"
@@ -349,6 +353,7 @@
           data-sectiononesearchtext="Search keyword..."
           data-listemptytexts="No pending transactions yet::No canceled transactions yet::No complete transactions yet::No refund transactions yet"
           data-listtitletexts="[Transaction ID//Customer//Purpose//Amount to Pay//Price Rate//Log Date & Time]::[Transaction ID//Customer//Purpose//Log Date & Time]::[Transaction ID//Customer//Purpose//Amount to Pay//Amount Paid: Cash//Amount Paid: Cashless//Change Amount//Price Rate//Payment Method//Log Date & Time]::[Transaction ID//Customer//Purpose//Refund Amount//Log Date & Time]"
+          data-listdatasortby="[name//name//name//number//name//date]::[name//name//name//date]::[name//name//name//number//number//number//number//name//name//date]::[name//name//name//number//date]"
           data-listitembtnids="[transactionProcessBtn//transactionCancelBtn]::[transactionDetailsBtn]::[transactionDetailsBtn//transactionRefundBtn]::[transactionDetailsBtn]"
           data-listitembtntexts="[Process [-📒-]//Cancel [-📕-]]::[Details [-⚙️-]]::[Details [-⚙️-]//Refund [-🧾-]]::[Details [-⚙️-]]"
           data-listitembtncolors="[yellow//red]::[gray]::[gray//gray]::[gray]"
