fix: temp stock logic

--- a/src/html/custom/ecommerce_cart_content.html
+++ b/src/html/custom/ecommerce_cart_content.html
@@ -10,7 +10,7 @@
 
   <div
     id="ecommerceCartProduct"
-    class="group relative mx-auto hidden w-full max-w-sm overflow-hidden rounded-2xl border border-yellow-200 bg-gradient-to-br from-amber-50 to-yellow-50 shadow-lg transition-all duration-300 hover:shadow-xl hover:shadow-yellow-200/50"
+    class="group relative mx-auto hidden w-full max-w-sm overflow-hidden rounded-2xl border border-yellow-200 bg-gradient-to-br from-amber-50 to-yellow-50 shadow-lg transition-all duration-300 hover:shadow-2xl hover:shadow-yellow-500/80"
   >
     <div class="relative overflow-hidden rounded-t-2xl">
       <div
@@ -44,7 +44,7 @@
       <div
         class="flex items-center justify-between gap-2 rounded-lg border border-gray-200 bg-white px-3 py-2 shadow-sm"
       >
-        <p class="${statusColor} text-xs font-semibold uppercase tracking-wide 2xl:text-sm 2xl:font-bold">
+        <p class="stock-display ${statusColor} text-xs font-semibold uppercase tracking-wide 2xl:text-sm 2xl:font-bold">
           ${stockText}
         </p>
         <div class="flex items-center justify-between gap-2">
