--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -212,6 +212,7 @@
           data-tabtitles="Regular Check-Ins Logbook::Monthly Check-Ins Logbook::Archived Check-Ins Logbook"
           data-subtitles="All regular customer check-ins::All monthly customer check-ins::All archived check-ins"
           data-sectiononesearchtext="Search keyword..."
+          data-sectiononesettings="1"
           data-listemptytexts="No regular customer check-ins yet::No monthly customer check-ins yet::No archived check-ins yet"
           data-listtitletexts="[Customer ID//Customer//Log Date & Time]::[Customer ID//Customer//Log Date & Time]::[Customer ID//Customer//Log Date & Time]"
           data-listdatasortby="[name//name//date]::[name//name//date]::[name//name//date]"
