feat: change the color of the data sync & equipment to make it same to the 4 sub modules

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -426,7 +426,7 @@
         id="maintenance-datasync-section"
         data-icons="fa-cogs::fa-rotate"
         data-sectiontexts="Maintenance::Data Sync"
-        data-color="pink-rose-indigo"
+        data-color="violet-fuchsia-red"
         class="section"
       >
         <div
@@ -476,7 +476,7 @@
         id="maintenance-equipment-section"
         data-icons="fa-cogs::fa-dumbbell"
         data-sectiontexts="Maintenance::Equipment"
-        data-color="cyan-blue-sky"
+        data-color="violet-fuchsia-red"
         class="section"
       >
         <div
