feat: add customer calendar module and integrate into various HTML pages
- Integrated customer calendar JavaScript module into index.html, _admin_main.html, apt_about_us.html, apt_privacy_policy.html, apt_terms_of_service.html, customer_dashboard.html, and customer_login.html.
- Updated customer_dashboard.html to include a booking form with service selection, time inputs, and validation.
- Modified admin_main.js to allow custom input types in modal setup.
- Enhanced ecommerce_cart.js to support select-all behavior for payment inputs.
- Refactored inquiry_reservations.js to use native time inputs and removed old time slot logic.
- Updated payments.js to include select-all behavior for payment method inputs.
- Created customer_calendar.js to manage calendar rendering, date selection, and booking form integration.

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -564,5 +564,6 @@
 
     <!-- imported js -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="/src/js/customer_modules/customer_calendar.js"></script>
   </body>
 </html>
