--- a/src/html/apt_privacy_policy.html
+++ b/src/html/apt_privacy_policy.html
@@ -951,5 +951,6 @@
     <script type="module" src="/src/js/apt.js"></script>
     <script type="module" src="/src/js/modal.js"></script>
     <!-- add new js here 👆 -->
+    <script src="/src/js/customer_modules/customer.calendar.js"></script>
   </body>
 </html>
