--- a/src/html/apt_terms_of_service.html
+++ b/src/html/apt_terms_of_service.html
@@ -842,6 +842,7 @@
     <!-- main js -->
     <script type="module" src="/src/js/apt.js"></script>
     <script type="module" src="/src/js/modal.js"></script>
+    <script src="/src/js/customer_modules/calendar.js"></script>
     <!-- add new js here 👆 -->
   </body>
 </html>
