--- a/index.html
+++ b/index.html
@@ -3285,5 +3285,6 @@
     <script type="module" src="/src/js/modal.js"></script>
     <!-- add new js here 👆 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.2/html2pdf.bundle.min.js"></script>
+    <script src="/src/js/customer_modules/customer.calendar.js"></script>
   </body>
 </html>
