--- a/src/html/customer_login.html
+++ b/src/html/customer_login.html
@@ -365,6 +365,7 @@
     <script type="module" src="/src/js/modal.js"></script>
     <script type="module" src="/src/js/customer_login.js"></script>
     <!-- add new js here 👆 -->
+    <script src="/src/js/customer_modules/calendar.js"></script>
 
     <!-- imported js -->
     <script
