--- a/src/html/custom/ecommerce_cart_content.html
+++ b/src/html/custom/ecommerce_cart_content.html
@@ -49,13 +49,23 @@
         </p>
         <div class="flex items-center justify-between gap-2">
           <button
-            class="decrease-btn flex h-8 w-8 items-center justify-center rounded-md bg-gradient-to-r from-red-400 to-red-500 text-sm font-bold text-white transition-colors duration-200 hover:from-red-500 hover:to-red-600"
+            type="button"
+            class="decrease-btn flex h-8 w-8 items-center justify-center rounded-l-md bg-gradient-to-r from-red-400 to-red-500 text-sm font-bold text-white transition-colors duration-200 hover:from-red-500 hover:to-red-600 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2"
           >
             –
           </button>
-          <span class="quantity-display min-w-6 px-1 text-center text-sm font-bold text-gray-800">1</span>
+          <input
+            type="number"
+            min="0"
+            value="1"
+            class="quantity-input h-8 w-12 bg-white text-center text-sm font-bold text-gray-800 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:ring-offset-1 appearance-none"
+            aria-label="Quantity"
+            oninput="this.value = this.value.replace(/[^0-9]/g, '');"
+            style="-moz-appearance: textfield;"
+          />
           <button
-            class="increase-btn flex h-8 w-8 items-center justify-center rounded-md bg-gradient-to-r from-yellow-400 to-amber-500 text-sm font-bold text-white transition-colors duration-200 hover:from-yellow-500 hover:to-amber-600"
+            type="button"
+            class="increase-btn flex h-8 w-8 items-center justify-center rounded-r-md bg-gradient-to-r from-yellow-400 to-amber-500 text-sm font-bold text-white transition-colors duration-200 hover:from-yellow-500 hover:to-amber-600 focus:outline-none focus:ring-2 focus:ring-yellow-500 focus:ring-offset-2"
           >
             +
           </button>
