--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -484,7 +484,7 @@
           data-title="Equipment Maintenance"
           data-subtitle="Manage Gym Equipment Maintenance"
           data-middletext="Monitor and log maintenance for all gym equipment"
-          data-mainbtntext="Log Maintenance [-🛠️-]"
+          data-mainbtntext="Add Equipment  [-🛠️-]"
         ></div>
         <div id="section-stats"></div>
         <div
