--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -496,7 +496,7 @@
           data-sectiontwosearchtext="Search logs..."
           data-sectiononesettings="1"
           data-listemptytexts="No equipment maintenance records::No logs available"
-          data-listtitletexts="[Equipment ID//Equipment Name//Quantity//Machine Type//Status//Register Date]::[Equipment ID//Quantity//Machine Type//Status//Timestamp]"
+          data-listtitletexts="[Equipment ID//Equipment Name//Quantity//Machine Type//General Status//Register Date]::[Equipment ID//Quantity//Machine Type//Status//Timestamp]"
           data-listitembtnids="[maintenanceDetailsBtn]::[viewLogDetails]"
           data-listitembtntexts="[Details [-🛠️-]]::[Details [-🔍-]]"
           data-listitembtncolors="[orange]::[blue]"
