feat: expand gym equipment management with disposal tracking and status updates

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -490,16 +490,15 @@
         <div
           id="section-content"
           data-sectioncount="1"
-          data-tabtitles="Equipment Maintenance Records::View system activities and events"
-          data-subtitles="Upcoming and past equipment maintenance::System Logs"
+          data-tabtitles="Equipment Maintenance Records::Disposal List::Disposed"
+          data-subtitles="Upcoming and past equipment maintenance::Items marked For Disposal::Disposed items log"
           data-sectiononesearchtext="Search equipment..."
-          data-sectiontwosearchtext="Search logs..."
           data-sectiononesettings="1"
-          data-listemptytexts="No equipment maintenance records::No logs available"
-          data-listtitletexts="[Equipment ID//Equipment Name//Quantity//Machine Type//General Status//Register Date]::[Equipment ID//Quantity//Machine Type//Status//Timestamp]"
-          data-listitembtnids="[maintenanceDetailsBtn]::[viewLogDetails]"
-          data-listitembtntexts="[Details [-🛠️-]]::[Details [-🔍-]]"
-          data-listitembtncolors="[orange]::[blue]"
+          data-listemptytexts="No equipment maintenance records::No equipment items For Disposal::No disposed items yet"
+          data-listtitletexts="[Equipment ID//Equipment Name//Quantity//Machine Type//General Status//Register Date]::[Item Code//Equipment Name//Status//Action Requested On]::[Item Code//Equipment Name//Disposed On]"
+          data-listitembtnids="[maintenanceDetailsBtn]::[disposeConfirmBtn]::[disposedDetailsBtn]"
+          data-listitembtntexts="[Details [-🛠️-]]::[Confirm [-🔏-]]::[Details [-🔍-]]"
+          data-listitembtncolors="[orange]::[red]::[gray]"
         ></div>
       </section>
 
