--- a/src/html/customer_dashboard.html
+++ b/src/html/customer_dashboard.html
@@ -798,6 +798,7 @@
     <!-- main js -->
     <script src="/src/js/customer_dashboard.js"></script>
     <script src="/src/js/customer_modules/customer_calendar.js"></script>
+    <script src="/src/js/customer_modules/customer_monthly_pass.js"></script>
     <!-- add new js here 👆 -->
   </body>
 </html>
