feat: Added Available, Unavailable, For Disposal, Disposed columns to the Individual Items feat: Make the status of dispose to Disposed and make it grey feat: Add Time Disposal to the Disposed TAB feat: No amount tendered if the Payment amount is zero in payment module

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -495,7 +495,7 @@
           data-sectiononesearchtext="Search equipment..."
           data-sectiononesettings="1"
           data-listemptytexts="No equipment maintenance records::No equipment items For Disposal::No disposed items yet"
-          data-listtitletexts="[Equipment ID//Equipment Name//Quantity//Machine Type//General Status//Register Date]::[Item Code//Equipment Name//Status//Action Requested On]::[Item Code//Equipment Name//Disposed On]"
+          data-listtitletexts="[Equipment ID//Equipment Name//Quantity//Machine Type//General Status//Register Date]::[Item Code//Equipment Name//Status//Action Requested On]::[Item Code//Equipment Name//Disposed On//Time Disposal]"
           data-listitembtnids="[maintenanceDetailsBtn]::[disposeConfirmBtn]::[disposedDetailsBtn]"
           data-listitembtntexts="[Details [-🛠️-]]::[Confirm [-🔏-]]::[Details [-🔍-]]"
           data-listitembtncolors="[orange]::[red]::[gray]"
