--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -353,11 +353,11 @@
           data-subtitles="Total pending transactions::Total void transactions::Total complete transactions::Total refund transactions"
           data-sectiononesearchtext="Search keyword..."
           data-listemptytexts="No pending transactions yet::No canceled transactions yet::No complete transactions yet::No refund transactions yet"
-          data-listtitletexts="[Transaction ID//Customer//Purpose//Amount to Pay//Price Rate//Log Date & Time]::[Transaction ID//Customer//Purpose//Log Date & Time]::[Transaction ID//Customer//Purpose//Amount to Pay//Amount Paid: Cash//Amount Paid: Cashless//Change Amount//Price Rate//Payment Method//Log Date & Time]::[Transaction ID//Customer//Purpose//Refund Amount//Log Date & Time]"
-          data-listdatasortby="[name//name//name//number//name//date]::[name//name//name//date]::[name//name//name//number//number//number//number//name//name//date]::[name//name//name//number//date]"
-          data-listitembtnids="[transactionProcessBtn//transactionCancelBtn]::[transactionDetailsBtn]::[transactionDetailsBtn//transactionRefundBtn]::[transactionDetailsBtn]"
-          data-listitembtntexts="[Process [-📒-]//Cancel [-📕-]]::[Details [-⚙️-]]::[Details [-⚙️-]//Refund [-🧾-]]::[Details [-⚙️-]]"
-          data-listitembtncolors="[yellow//red]::[gray]::[gray//gray]::[gray]"
+          data-listtitletexts="[Transaction ID//Customer//Purpose//Amount to Pay//Price Rate//Log Date & Time]::[Transaction ID//Customer//Purpose//Log Date & Time]::[Transaction ID//Customer ID//Log Date & Time]::[Transaction ID//Customer//Purpose//Refund Amount//Log Date & Time]"
+          data-listdatasortby="[name//name//name//number//name//date]::[name//name//name//date]::[name//name//date]::[name//name//name//number//date]"
+          data-listitembtnids="[transactionProcessBtn//transactionCancelBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]"
+          data-listitembtntexts="[Process [-📒-]//Cancel [-📕-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]"
+          data-listitembtncolors="[yellow//red]::[gray]::[gray]::[gray]"
         ></div>
       </section>
 
