fix: ecommerce to store

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -265,7 +265,7 @@
       <section
         id="ecommerce-cart-section"
         data-icons="fa-store::fa-cart-shopping"
-        data-sectiontexts="E-Commerce::Cart"
+        data-sectiontexts="Store::Cart"
         data-color="yellow-orange-rose"
         class="section"
       >
@@ -294,7 +294,7 @@
       <section
         id="ecommerce-stock-section"
         data-icons="fa-store::fa-warehouse"
-        data-sectiontexts="E-Commerce::Stock"
+        data-sectiontexts="Store::Stock"
         data-color="yellow-orange-cyan"
         class="section"
       >
