feat: reservation firebase connection

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.js"></script>
 
+    <!-- firebase (for database) -->
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
+
     <!-- custom font (just in case) -->
     <!-- <style>
       @font-face {
