feat: enhance user preferences management with settings UI and add a Machine Type in the update modal

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -516,7 +516,13 @@
           data-mainbtntext="Save Changes [-💾-]"
         ></div>
         <div id="section-stats"></div>
-        <div id="section-content"></div>
+        <div
+          id="section-content"
+          data-sectioncount="1"
+          data-tabtitles="User Preferences"
+          data-subtitles="Choose modules and basic options"
+          data-sectiononesettings="1"
+        ></div>
       </section>
 
       <!-- 🔥 sample 🔥 -->
