fix: update section text from "Check-Ins" to "Logbooks" in admin main HTML

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -198,7 +198,7 @@
       <section
         id="inquiry-checkins-section"
         data-icons="fa-users::fa-ticket-simple"
-        data-sectiontexts="Inquiry::Check-Ins"
+        data-sectiontexts="Inquiry::Logbooks"
         data-color="blue-indigo-orange"
         class="section"
       >
